tests/ui/parser/macro/issue-37113.stderr
error: expected identifier, found metavariable
  --> $DIR/issue-37113.rs:4:16
   |
LL |         enum SomeEnum {
   |              -------- while parsing this enum
LL |             $( $t, )*
   |                ^^ expected identifier, found metavariable
...
LL |     test_macro!(String,);
   |     -------------------- in this macro invocation
   |
   = help: enum variants can be `Variant`, `Variant = <integer>`, `Variant(Type, ..., TypeN)` or `Variant { fields: Types }`
   = note: this error originates in the macro `test_macro` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 1 previous error

